refactor: migrate template contract gate